tolk-tester/tests/invalid-symbol/err-2042.tolk
fun main(outerParam: int) {
    fun(x: int) {
        x + outerParam
    }
}

/**
@compilation_should_fail
@stderr undefined symbol `outerParam`
 */
